crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__add_pep508_dependency.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.document.to_string()
---

[project]
name = "flask-hello-world-pyproject"
version = "0.1.0"
description = "Example how to get started with flask in a pixi environment."
license = "MIT OR Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flask==2.*", "numpy>=3.12"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
start = "python -m flask run --port=5050"

[dependency-groups]
test = ["pytest>=3.12"]
