crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__python_dependencies.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "manifest.default_feature().targets.default().pypi_dependencies.clone().into_iter().flat_map(|d|\nd.into_iter()).map(|(name, specs)|\nformat!(\"{} = {}\", name.as_source(),\ntoml_edit::Value::from(specs.iter().next().expect(\"spec should be present\").clone()))).join(\"\\n\")"
---
foo = ">=3.12"
bar = { version = ">=3.12", extras = ["baz"] }
