crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__target_specific_tasks.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "manifest.default_feature().targets.iter().flat_map(|(target, selector)|\n{\n    let selector_name =\n    selector.map_or_else(|| String::from(\"default\"), ToString::to_string);\n    target.tasks.iter().map(move |(name, task)|\n    {\n        format!(\"{}/{} = {:?}\", &selector_name, name.as_str(),\n        task.as_single_command(&TaskRenderContext::default()).ok().flatten().map(|c|\n        c.to_string()))\n    })\n}).join(\"\\n\")"
---
default/test = Some("test multi")
win-64/test = Some("test win")
linux-64/test = Some("test linux")
