crates/pixi_manifest/src/manifests/snapshots/pixi_manifest__manifests__workspace__tests__test_remove_pypi_feature_dep.snap
---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: manifest.document.to_string()
---
[project]
name = "pixi_fun"
version = "0.1.0"
channels = []
platforms = ["linux-64", "win-64"]

[dependencies]
python = ">=3.12.1,<3.13"

[pypi-dependencies]
requests = "*"

[target.win-64.pypi-dependencies]
jax = { version = "*", extras = ["cpu"] }
requests = "*"

[target.linux-64.pypi-dependencies]
xpackage = "==1.2.3"
ypackage = {version = ">=1.2.3"}

[feature.test.target.linux-64.pypi-dependencies]
feature_target_dep = "*"
